[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/level_button_disabled.png" type="Texture" id=1]
[ext_resource path="res://UI/level_button_pressed.png" type="Texture" id=2]
[ext_resource path="res://UI/level_button.png" type="Texture" id=3]
[ext_resource path="res://UI/level_button_highlighted.png" type="Texture" id=4]
[ext_resource path="res://scene/LevelButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprite/hex.png" type="Texture" id=6]
[ext_resource path="res://script/LevelButtonContainer.gd" type="Script" id=7]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 555, 643 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 555, 643 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 555, 643 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 555, 643 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/Quicksand-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 5 )

[node name="LevelHub" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 327.697, 142.087 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lines" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.388235 )
rotation = 0.523599
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 6 )

[node name="LevelButtonN" parent="." instance=ExtResource( 5 )]
margin_left = -36.492
margin_top = -152.532
margin_right = 33.508
margin_bottom = -72.5316
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )

[node name="LevelButtonNW" parent="." instance=ExtResource( 5 )]
margin_left = -128.51
margin_top = -95.8763
margin_right = -58.5101
margin_bottom = -15.8759
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )

[node name="LevelButtonNE" parent="." instance=ExtResource( 5 )]
margin_left = 58.113
margin_top = -95.8763
margin_right = 128.113
margin_bottom = -15.8759
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )

[node name="LevelButtonSW" parent="." instance=ExtResource( 5 )]
margin_left = -128.51
margin_top = 13.9169
margin_right = -58.5101
margin_bottom = 93.9169
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )

[node name="LevelButtonSE" parent="." instance=ExtResource( 5 )]
margin_left = 58.426
margin_top = 13.9169
margin_right = 128.426
margin_bottom = 93.9169
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )

[node name="LevelButtonS" parent="." instance=ExtResource( 5 )]
margin_left = -33.9052
margin_top = 68.1359
margin_right = 36.0948
margin_bottom = 148.136
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
